[package]
name = "osx-sys"
version = "0.1.0"
edition = "2021"
author = "MozhuCY <mozhucy@gmail.com>"
license = "MIT"
description = "FFI bindings to MacOSX SDK"
readme = "README.md"
build = "build.rs"
homepage = "https://github.com/MozhuCY/osx-sys"
repository = "https://github.com/MozhuCY/osx-sys"
documentation = "https://docs.rs/osx-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.65.1"